# clipse

./: .coverage 2  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.json  index.html  mkdocs.yml  mypy.ini  project_prompt.md  project_prompt_notes.md  pyproject.toml  ruff.toml  schema.json  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs-check.yml  docs.yml  lint.yml  release.yml  tests.yml  type.yml
clipse_config_file_guide/: index.html
docs/: api.md  clipse_config_file_guide.md  index.md
docs/assets/scripts/: logo-swap.js
docs/assets/styles/: extra.css
docs/getting-started/: configuring.md  index.md  installing.md  troubleshooting.md
docs/integration/: index.md
docs/project/: index.md
docs/reference/: index.md
docs/schema/: index.md
examples/: example_config.json  quickstart.ipynb
getting-started/: index.html
getting-started/configuring/: index.html
getting-started/installing/: index.html
getting-started/troubleshooting/: index.html
integration/: index.html
project/: index.html
resources/: standard_types.yaml
schema/: clipse.schema.1.0.0.json  clipse_style.schema.1.0.0.json  dclipse.schema.1.0.0.json  dclipse_style.schema.1.0.0.json  index.html
search/: search_index.json
src/clipse/: __init__.py  cli.py  core.py  instructions.py  resolver.py  schema.py  style_loader.py
src/clipse/schema/: clipse.schema.1.0.0.json  clipse_style.schema.1.0.0.json
src/dclipse/: __init__.py  cli.py  core.py  instructions.py  resolver.py  schema.py  style_loader.py
tests/: conftest.py  test_cli.py  test_cli_more.py  test_core.py  test_core_more.py  test_instructions.py  test_instructions_more.py  test_loader.py  test_resolver.py  test_schema.py  test_schema_and_style_loader.py  test_style_config_files.py  test_style_python_module.py
tools/: check_doc_examples.py  sync_schemas.py
